# omni-server

./: .env.example  .gitignore  AI_RCA_DESIGN.md  RCA_TEST_SUMMARY.md  README.md  alembic.ini  architecture.md  coverage.json  pyproject.toml  pytest.ini  requirements-prod.txt  seed_data.py
alembic/: env.py
alembic/migrations/: 001_add_auth_models.py  002_add_task_dependencies_and_locks.py  003_add_device_tables.py
docs/: API_CHANGELOG.md  API_MIGRATION_GUIDE.md  STATE_MACHINE_DIAGRAMS.md
docs/examples/: websocket_client.py
docs/rca-system/: API.md  COSTS_AND_PERFORMANCE.md  DEVELOPER_GUIDE.md  OPERATIONS.md  SETUP.md  USER_GUIDE.md
src/omni_server/: __init__.py  config.py  database.py  main.py  models.py
src/omni_server/admin/: __init__.py
src/omni_server/ai/: __init__.py  context_extractor.py  llm_client.py  openai_client.py  rca_prompt_builder.py  rca_service.py
src/omni_server/api/: __init__.py  dependencies.py  devices.py  eventsourcing.py  observability.py  tasks.py  websocket.py
src/omni_server/auth/: __init__.py  models.py  routes.py  service.py
src/omni_server/cleanup/: __init__.py  heartbeat.py
src/omni_server/config/: versions.py
src/omni_server/events/: __init__.py  events.py
src/omni_server/eventstore/: __init__.py  aggregate.py
tests/: conftest.py  test_api_auth.py  test_api_devices.py  test_api_tasks.py  test_api_users.py  test_auth.py  test_config.py  test_dependencies_and_locks.py  test_event_sourcing.py  test_models.py  test_oauth_and_integration.py  test_performance.py  test_queue.py  test_rca_api.py  test_rca_autotrigger.py  test_rca_service.py  test_schemas.py  test_token_handling.py  test_users.py
(+15 files in other folders)
